# Animus

./: .gitignore  Cargo.toml  anima_gui.py  et_module.json  install.sh  requirements.txt
animus_bridge/: bridge.py
animus_bridge/tests/: test_bridge.py
deploy/: animus.env.template  animus.service
docs/superpowers/plans/: 2026-05-28-anima-phase4-close-substrate-loop.md  2026-05-31-anima-gui.md
src/: agent_runner.rs  auth.rs  budget.rs  config.rs  context_builder.rs  envelope.rs  introspection.rs  lib.rs  main.rs  outbound.rs  pipeline.rs  rpc_adapter.rs  text.rs  tool_dispatcher.rs  tract_writer.rs  trollguard.rs
src/adapters/: cli.rs  discord.rs  http.rs  mod.rs
tests/: test_auth.rs  test_btf.rs  test_rpc_adapter.rs  test_trollguard.rs
