# ---- Changelog ----
# [2026-05-10] Claude (Sonnet 4.6) — Task 1: Initial scaffold
# What: Cargo.toml for the Animus Rust binary + library
# Why: Project scaffold — all deps pulled in now so resolution happens once
# How: Standard Cargo workspace with bin + lib targets, serenity for Discord (Phase 2)
#      rustls used throughout (pure-Rust TLS) — avoids libssl-dev system dependency
# [2026-06-06] Claude (Sonnet 4.6) — Task 3: add ng_tract dep (BTF experience writes)
# What: ng_tract path dep with default-features=false (pure Rust, no pyo3/numpy/BLAS)
# Why: Plan Task 3 — TractWriter gains deposit_experience/deposit_experience_silent
# How: Consumes only ng_tract::format, read, write — engine/python features excluded
# -------------------

[package]
name = "animus"
version = "0.1.0"
edition = "2021"
description = "Substrate-native agentic gateway for the E-T Systems / NeuroGraph ecosystem"
license = "AGPL-3.0"

[[bin]]
name = "animus"
path = "src/main.rs"

[lib]
name = "animus"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
rmp-serde = "1.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
ng_tract = { path = "../UniAI/rust_core", default-features = false }

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
httpmock = "0.7"
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
